# base-kata

./: CMakeLists.txt  CONTRIBUTING.md  Library.cpp  README.md  Tests.cpp  conanfile.txt
cpp/: .clang-format  CMakeLists.txt  Launcher.cpp  Library.h  Readme.md  Tests.cpp  conanfile.txt  init.bat
go/: Readme.md  code.go  code_test.go
js/: kata.spec.js  package.json
php/: Code.php  Readme.md  Test.php
python/: Code.py  README.md  requirements.txt  tests.py
